# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/deviceprofile/device_info_manager/deviceprofile.gni")

config("distributed_device_profile_client_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${old_device_profile_path}/common/include",
    "${old_device_profile_path}/radar/include",
  ]
}

ohos_shared_library("distributed_device_profile_client") {
  branch_protector_ret = "pac_ret"
  ldflags = [
    "-Wl,-z,relro",
    "-Wl,-z,now",
  ]

  cflags = [
    "-fPIC",
    "-fstack-protector-strong",
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  cflags_cc = cflags

  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  install_enable = true

  sources = [
    "${old_device_profile_path}/common/src/device_profile_utils.cpp",
    "${old_device_profile_service}/core/src/profile_change_notification.cpp",
    "${old_device_profile_service}/core/src/service_characteristic_profile.cpp",
    "${old_device_profile_service}/core/src/subscribemanager/subscribe_info.cpp",
    "${old_device_profile_service}/core/src/sync_options.cpp",
    "src/callback/device_profile_load_callback.cpp",
    "src/distributed_device_profile_client.cpp",
    "src/distributed_device_profile_proxy.cpp",
    "src/profile_event_notifier_stub.cpp",
  ]

  public_configs = [
    ":distributed_device_profile_client_config",
    "${old_device_profile_test}/resource:coverage_flags",
  ]

  deps = [ "${old_device_profile_path}/radar:deviceprofileradar" ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "samgr:samgr_proxy",
  ]

  part_name = "device_info_manager"
  subsystem_name = "deviceprofile"
}
