# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("//foundation/deviceprofile/device_info_manager/deviceprofile.gni")

module_output_path = "device_info_manager/device_info_manager"

device_profile_deps = [
  "${old_device_profile_innerkits}/core:distributed_device_profile_client",
  "${old_device_profile_path}/radar:deviceprofileradar",
  "${old_device_profile_service}/core:distributed_device_profile",
]

device_profile_external_deps = [
  "hilog:libhilog",
  "hisysevent:libhisysevent",
  "ipc:ipc_core",
]

ohos_unittest("dp_radar_helper_test_old") {
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  module_out_path = module_output_path
  include_dirs = [ "${old_device_profile_path}/radar/include" ]
  sources = [ "dp_radar_helper_test.cpp" ]
  deps = device_profile_deps
  external_deps = device_profile_external_deps
  part_name = "device_info_manager"
  subsystem_name = "deviceprofile"
}
