# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/deviceprofile/device_info_manager/deviceprofile.gni")
module_output_path = fuzz_test_output_path

device_profile_configs = [
  "${device_profile_service}/core:device_info_manager_config",
  "${device_profile_test}/resource:coverage_flags",
]

device_profile_external_deps = [
  "access_token:libaccesstoken_sdk",
  "c_utils:utils",
  "device_auth:deviceauth_sdk",
  "device_manager:devicemanagersdk",
  "dsoftbus:softbus_client",
  "eventhandler:libeventhandler",
  "hilog:libhilog",
  "hisysevent:libhisysevent",
  "ipc:ipc_core",
  "kv_store:distributeddata_inner",
  "syscap_codec:syscap_interface_shared",
]

device_profile_deps = [
  "${device_profile_innerkits}/core:distributed_device_profile_client",
  "${device_profile_service}/core:distributed_device_profile",
]

##############################fuzztest##########################################
ohos_fuzztest("PutDeviceProfileFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file =
      "${device_profile_service}/core/test/fuzztest/putdeviceprofile_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  configs = device_profile_configs

  sources = [ "putdeviceprofile_fuzzer.cpp" ]

  deps = device_profile_deps

  external_deps = device_profile_external_deps
}

group("fuzztest") {
  testonly = true

  deps = [ ":PutDeviceProfileFuzzTest" ]
}
