# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/deviceprofile/device_info_manager/deviceprofile.gni")
module_output_path = fuzz_test_output_path

device_profile_configs = [
  "${device_profile_service}:device_info_manager_config"
]

device_profile_deps = [
  "${device_profile_common}:distributed_device_profile_common",
  "${device_profile_innerkits}:distributed_device_profile_sdk",
  "${device_profile_service}:distributed_device_profile_svr",
]

##############################fuzztest##########################################
ohos_fuzztest("ServiceInfoProfileNewFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file =
      "${device_profile_service}/test/fuzztest/serviceinfoprofilenew_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Dprivate=public",
    "-Dprotected=public",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  configs = device_profile_configs

  sources = [ "service_info_profile_new_fuzzer.cpp" ]

  deps = device_profile_deps

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "cJSON:cjson",
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "device_auth:deviceauth_sdk",
    "device_manager:devicemanagersdk",
    "dmsfwk:common_sdk",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "syscap_codec:syscap_interface_shared",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":ServiceInfoProfileNewFuzzTest" ]
}