# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/deviceprofile/device_info_manager/deviceprofile.gni")
module_output_path = old_fuzz_test_output_path

device_profile_configs = [
  "${old_device_profile_service}/core:device_info_manager_config",
  "${old_device_profile_test}/resource:coverage_flags",
]

device_profile_deps = [
  "${old_device_profile_innerkits}/core:distributed_device_profile_client",
  "${old_device_profile_service}/core:distributed_device_profile",
]

##############################fuzztest##########################################
ohos_fuzztest("DeviceProfileFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file =
      "${old_device_profile_service}/core/test/fuzztest/deviceprofile_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Dprivate=public",
    "-Dprotected=public",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  configs = device_profile_configs

  sources = [ "device_profile_fuzzer.cpp" ]

  deps = device_profile_deps

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "safwk:system_ability_fwk",
  ]
}

group("fuzztest") {
  testonly = true

  deps = [ ":DeviceProfileFuzzTest" ]
}
